@@ -9,6 +9,7 @@ ART 3.7
 * Fix for report source not being displayed in quick edit section
 * Allow saving pivot table only from a tabular report
 * Allow changing report name when overwriting pivottable.js and gridstack reports
+* Allow saving of selected parameters when saving pivottable.js and gridstack reports
 * Updated jclouds, pivottable.js, ucanaccess
 
 ART 3.6
